agregardo esquema html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="syle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>Encriptador de texto</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img class="logo" src="images/logo.png">
+            <h3></h3>
+        </div>
+    </header>
+    <main>
+        <section >
+            <div class="texto1">
+                <div class="div-texto">
+                    <textarea class="text-area1" placeholder="Ingrese el texto aquí" rows="17"></textarea>
+                </div>
+                
+                <div class="btn-encriptado">
+                        <p class="mensaje"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="#65747d" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2a1 1 0 0 0 0-2z"/></svg> Solo letras minúsculas y sin acentos</p>
+                    <input type="button" class="btn-encriptar" value="Encriptar">
+                    <input type="button" class="btn-desencriptar" value="Desencriptar">
+                </div>
+            </div>
+            <div class="texto2">
+                hola2
+            </div>
+        </section>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
