--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <section >
             <div class="texto1">
                 <div class="div-texto">
-                    <textarea class="text-area1" placeholder="Ingrese el texto aquí" rows="17"></textarea>
+                    <textarea class="text-area1" placeholder="Ingrese el texto aquí" rows="12"></textarea>
                 </div>
                 
                 <div class="btn-encriptado">
-                        <p class="mensaje"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="#65747d" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2a1 1 0 0 0 0-2z"/></svg> Solo letras minúsculas y sin acentos</p>
+                        <div class="mensaje">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 16 16"><path fill="#65747d" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2a1 1 0 0 0 0-2z"/></svg><span> Solo letras minúsculas y sin acentos</span> 
+                        </div>
                     <input type="button" class="btn-encriptar" value="Encriptar">
                     <input type="button" class="btn-desencriptar" value="Desencriptar">
                 </div>
