agregando foto en section2

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="texto2">
-                hola2
+                <img src="images/personaje.png" alt="">
             </div>
         </section>
         <section>
