boceto uno terminado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                 </div>
             </div>
             <div class="texto2">
-                <img src="images/personaje.png" alt="">
+                <div class="imagen-personaje">
+                    <img class="imagen2" src="images/personaje.png" alt="">
+                </div>
+                <div class="descripcion">
+                    <p class="primera-descripcion">
+                        Ningún mensaje fue encontrado
+                    </p>
+                    <p class="segunda-descripcion">
+                        Ingrese el texto que desea encriptar o desencriptar.
+                    </p>
+                </div>
             </div>
         </section>
         <section>
