--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                     </p>
                 </div>
             </div>
+            <div class="div-texto2-encontrado">
+                <div class="texto2-encontrado">
+                    <textarea  class="text-area2" cols="26" rows="22"></textarea>
+                </div>
+                <div class="div-btn-copiar">
+                    <input class="btn-copiar" type="button" value="Copiar">
+                </div>
+            </div>
         </section>
         <section>
 
