--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="div-texto2-encontrado">
                 <div class="texto2-encontrado">
-                    <textarea  class="text-area2" cols="26" rows="22"></textarea>
+                    <textarea readonly  class="text-area2" cols="26" rows="22"></textarea>
                 </div>
                 <div class="div-btn-copiar">
                     <input class="btn-copiar" type="button" value="Copiar">
