--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         </div>
     </header>
     <main>
-        <section >
-            <div class="texto1">
+        <section class="texto1">
                 <div class="div-texto">
-                    <textarea class="text-area1" placeholder="Ingrese el texto aquí" rows="12"></textarea>
+                    <textarea class="text-area1" autofocus placeholder="Ingrese el texto aquí" rows="12"></textarea>
                 </div>
                 
                 <div class="btn-encriptado">
@@ -32,8 +31,8 @@
                     <input type="button" class="btn-encriptar" value="Encriptar">
                     <input type="button" class="btn-desencriptar" value="Desencriptar">
                 </div>
-            </div>
-            <div class="texto2">
+        </section>
+        <section class="texto2">
                 <div class="imagen-personaje">
                     <img class="imagen2" src="images/personaje.png" alt="">
                 </div>
@@ -45,22 +44,23 @@
                         Ingrese el texto que desea encriptar o desencriptar.
                     </p>
                 </div>
-            </div>
-            <div class="div-texto2-encontrado">
+        </section>
+        <section class="div-texto2-encontrado">
                 <div class="texto2-encontrado">
                     <textarea readonly  class="text-area2" cols="26" rows="22"></textarea>
                 </div>
                 <div class="div-btn-copiar">
                     <input class="btn-copiar" type="button" value="Copiar">
                 </div>
-            </div>
-        </section>
-        <section>
-
         </section>
     </main>
     <footer>
+        <div class="creditos"> 
+            <p class="nombre">
+                Dev Maria Gonzales 2023 <a href="https://github.com/MariaGonzalesBaldera" target="_blank"><img class="img-git" src="images/github.png"></a>
+            </p>
 
+        </div>
     </footer>
 </body>
 <script src="script.js"></script>
