--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <header>
         <div>
             <img class="logo" src="images/logo.png">
-            <h3></h3>
         </div>
     </header>
     <main>
-        <section class="texto1">
+        <section class="div-principal">
                 <div class="div-texto">
                     <textarea class="text-area1" autofocus placeholder="Ingrese el texto aquí" rows="12"></textarea>
                 </div>
@@ -32,7 +31,8 @@
                     <input type="button" class="btn-desencriptar" value="Desencriptar">
                 </div>
         </section>
-        <section class="texto2">
+        <section class="div-secundario">
+            <div class="texto2">
                 <div class="imagen-personaje">
                     <img class="imagen2" src="images/personaje.png" alt="">
                 </div>
@@ -44,14 +44,15 @@
                         Ingrese el texto que desea encriptar o desencriptar.
                     </p>
                 </div>
-        </section>
-        <section class="div-texto2-encontrado">
+            </div>
+            <div class="div-texto2-encontrado">
                 <div class="texto2-encontrado">
                     <textarea readonly  class="text-area2" cols="26" rows="22"></textarea>
                 </div>
                 <div class="div-btn-copiar">
                     <input class="btn-copiar" type="button" value="Copiar">
                 </div>
+            </div>
         </section>
     </main>
     <footer>
